--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-core</artifactId>
+			<version>1.0.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-alfresco</artifactId>
 			<version>0.2.8-RELEASE</version>
 		</dependency>
