--- a/pom.xml
+++ b/pom.xml
@@ -10,16 +10,68 @@
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-core</artifactId>
 			<version>1.0.2.RELEASE</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>commons-logging</artifactId>
+					<groupId>commons-logging</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-alfresco</artifactId>
 			<version>0.2.8-RELEASE</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>alfresco-opencmis-extension</artifactId>
+					<groupId>org.alfresco.cmis.client</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>
+						chemistry-opencmis-client-bindings
+					</artifactId>
+					<groupId>org.apache.chemistry.opencmis</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>
+						chemistry-opencmis-commons-api
+					</artifactId>
+					<groupId>org.apache.chemistry.opencmis</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>
+						chemistry-opencmis-commons-impl
+					</artifactId>
+					<groupId>org.apache.chemistry.opencmis</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>
+						chemistry-opencmis-client-api
+					</artifactId>
+					<groupId>org.apache.chemistry.opencmis</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>
+						chemistry-opencmis-client-impl
+					</artifactId>
+					<groupId>org.apache.chemistry.opencmis</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-htmlunit-driver</artifactId>
 			<version>2.25.0</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>commons-logging</artifactId>
+					<groupId>commons-logging</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>guava</artifactId>
+					<groupId>com.google.guava</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
